Fixed permanent scrollbar

--- a/src/ui/app.component.scss
+++ b/src/ui/app.component.scss
@@ -41,6 +41,7 @@ html, body {
   background: $color-grey-1 url("/assets/images/main-background.png") repeat fixed;
   font-size: 17px;
   font-family: Libertine;
+  margin-bottom: 0;
 }
 
 a.active {
